--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>IP Location Finder</h1>
+    <h1>WorldGeo</h1>
     <input type="text" id="ipInput" placeholder="Enter IP Address">
     <button id="location"   onclick="getLocationDetails()">Find Location</button>
     <div id="locationDetails"></div>
