--- a/dashboard.html
+++ b/dashboard.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IP Location Finder</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Dashboard Page</title>
+    <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
     <h1>WorldGeo</h1>
@@ -13,6 +13,6 @@
     <div id="locationDetails"></div>
     <button id="likeButton" onclick="likeLocation()">Like</button>
 
-    <script src="index.js"></script>
+    <script src="dashboard.js"></script>
 </body>
 </html>
