--- a/dashboard.html
+++ b/dashboard.html
@@ -7,11 +7,22 @@
     <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
-    <h1>WorldGeo</h1>
+    <h1> IP Geolocation</h1>
     <input type="text" id="ipInput" placeholder="Enter IP Address">
     <button id="location"   onclick="getLocationDetails()">Find Location</button>
     <div id="locationDetails"></div>
     <button id="likeButton" onclick="likeLocation()">Like</button>
+
+    <nav class="nav">
+        <div></div>
+        <a href=""></a>
+
+    </nav>
+
+    <!-- <section>
+        <span id="">About</span>
+        <h3> </h3>
+    </section> -->
 
     <script src="dashboard.js"></script>
 </body>
