--- a/dashboard.html
+++ b/dashboard.html
@@ -7,33 +7,31 @@
     <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
+
+
+  <h1> IP Geolocation</h1>
+  <input type="text" id="ipInput" placeholder="Enter IP Address">
+  <button id="location"   onclick="getLocationDetails()">Find Location</button>
+  <div id="locationDetails"></div>
+  <!-- <button id="likeButton" onclick="likeLocation()">Like</button> -->
+  <section>
   
-  <ul class="nav justify-content-end">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Active</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-    </li>
-  </ul>
+<nav class="navbar">
+  <div id="close-bar" class="fas fa-times"></div>
+    <a href="#about"></a>
+  
+</nav>
+
+
+<section id="about">
+  <span>About</span>
+  <h3>IP Geolocation gives you reliable information on areas via IP addresses therefore avoiding being stuck somewhere or
+     getting to know a place well because this app gives you more than enough information. </h3>
+</section>
 
 
 
-
-
-    <h1> IP Geolocation</h1>
-    <input type="text" id="ipInput" placeholder="Enter IP Address">
-    <button id="location"   onclick="getLocationDetails()">Find Location</button>
-    <div id="locationDetails"></div>
-    <button id="likeButton" onclick="likeLocation()">Like</button>
-
-
+  </section>
     <script src="dashboard.js"></script>
 </body>
 </html>
