--- a/login.html
+++ b/login.html
@@ -20,6 +20,7 @@
    
         <button type="submit"><b>Log in</b></button> <br> <br>
    <a href="/signup.html">Sign up first</a>
+   <a href="/dashboard.html">Home</a>
        
       </form>
     </div>
