--- a/signup.html
+++ b/signup.html
@@ -21,6 +21,7 @@
        
             <button type="submit"><b>Sign Up</b></button> <br> <br>
        <a href="/login.html">Login to an existing account</a>
+       <a href="/dashboard.html">Home</a>
            
           </form>
         </div>
