--- a/login.html
+++ b/login.html
@@ -16,10 +16,10 @@
         <legend style=" color: blue;font-size: 40px;text-align: center"> <b>IP Geolocation</b> </legend>
      <form>
         <p style="font-size: 20px;">Log in to IP Geolocation</p>
-        <input type="email"placeholder="Email address or phone number" style="height: 30px;"> <br> <br>
-        <input type="password"placeholder="Password" style="height: 30px"> <br><br>
+        <input id="emaillog"   type="email"placeholder="Email address or phone number" style="height: 30px;"> <br> <br>
+        <input id="passlog"  type="password"placeholder="Password" style="height: 30px"> <br><br>
    
-        <button type="submit"><b>Log in</b></button> <br> <br>
+        <button id="btnlogin" type="submit"><b>Log in</b></button> <br> <br>
    <a href="/signup.html">Sign up first</a>
    <a href="/dashboard.html">Home</a>
        
