--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
         <input id="passlog"  type="password"placeholder="Password" style="height: 30px"> <br><br>
    
         <button id="btnlogin" type="submit"><b>Log in</b></button> <br> <br>
-   <a href="/signup.html">Sign up first</a>
-   <a href="/dashboard.html">Home</a>
+   <a id="asignup"   href="/signup.html">Sign up first</a>
+   <a id="adash" href="/dashboard.html">Home</a>
        
       </form>
     </div>
