--- a/dashboard.html
+++ b/dashboard.html
@@ -21,9 +21,9 @@
       
     </nav>
 
-  <input type="text" id="ipInput" placeholder="Enter IP Address">
+  <!-- <input type="text" id="ipInput" placeholder="Enter IP Address">
   <button id="location"   onclick="getLocationDetails()">Find Location</button>
-  <div id="locationDetails"></div>
+  <div id="locationDetails"></div> -->
  
 
 
@@ -33,7 +33,7 @@
      getting to know a place well because this app gives you more than enough information. </h3>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax"></script> -->
     <script src="dashboard.js"></script>
     
 </body>
