--- a/dashboard.html
+++ b/dashboard.html
@@ -21,16 +21,17 @@
       
     </nav>
 
-  <!-- <input type="text" id="ipInput" placeholder="Enter IP Address">
-  <button id="location"   onclick="getLocationDetails()">Find Location</button>
-  <div id="locationDetails"></div> -->
- 
-
-
 </section>
+  <input type="text" id="ipInput" placeholder="Enter IP Address">
+  <button id="location"   onclick="getLocationDetails()">Find Location</button>
+  <div id="locationDetails"></div>
 
-<h3 id="about1">IP Geolocation gives you reliable information on areas via IP addresses therefore avoiding being stuck somewhere or
-     getting to know a place well because this app gives you more than enough information. </h3>
+
+<footer>
+  <h3 id="about1">IP Geolocation gives you reliable information on areas via IP addresses therefore avoiding being stuck somewhere or
+    getting to know a place well because this app gives you more than enough information.</h3>
+
+</footer> 
 
 
 <!-- <script src="https://cdnjs.cloudflare.com/ajax"></script> -->
