--- a/dashboard.html
+++ b/dashboard.html
@@ -27,14 +27,13 @@
   <div id="locationDetails"></div>
 
 
-<footer>
-  <h3 id="about1">IP Geolocation gives you reliable information on areas via IP addresses therefore avoiding being stuck somewhere or
-    getting to know a place well because this app gives you more than enough information.</h3>
+<footer id="footer">
+  <p id="about1">IP Geolocation gives you reliable information on areas via IP addresses therefore avoiding being stuck somewhere or
+    getting to know a place well because this app gives you more than enough information.</p>
 
 </footer> 
 
 
-<!-- <script src="https://cdnjs.cloudflare.com/ajax"></script> -->
     <script src="dashboard.js"></script>
     
 </body>
