--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Page</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -34,7 +34,7 @@
 </footer> 
 
 
-    <script src="dashboard.js"></script>
+    <script src="index.js"></script>
     
 </body>
 </html>
