--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
    
         <button id="btnlogin" type="submit"><b>Log in</b></button> <br> <br>
    <a id="asignup"   href="/signup.html">Sign up first</a>
-   <a id="adash" href="/dashboard.html">Home</a>
+   <a id="adash" href="/index.html">Home</a>
        
       </form>
     </div>
