--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
        
             <button id="btnsign" type="submit"><b>Sign Up</b></button> <br> <br>
        <a href="/login.html">Login to an existing account</a>
-       <a href="/dashboard.html">Home</a>
+       <a href="/index.html">Home</a>
            
           </form>
         </div>
