--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="login.css">
-    <script type="module"src='login.js' defer></script>
+    <!-- <script type="module"src='login.js' defer></script> -->
 </head>
 <body>
 
@@ -16,11 +16,11 @@
         <legend style=" color: blue;font-size: 40px;text-align: center"> <b>IP Geolocation</b> </legend>
      <form>
         <p style="font-size: 20px;">Log in to IP Geolocation</p>
-        <input id="emaillog"   type="email"placeholder="Email address or phone number" style="height: 30px;"> <br> <br>
-        <input id="passlog"  type="password"placeholder="Password" style="height: 30px"> <br><br>
+        <input id="emaillog" type="email" placeholder="Email address or phone number" style="height: 30px;"> <br> <br>
+        <input id="passlog"  type="password" placeholder="Password" style="height: 30px"> <br><br>
    
         <button id="btnlogin" type="submit"><b>Log in</b></button> <br> <br>
-   <a id="asignup"   href="/signup.html">Sign up first</a>
+   <a id="asignup" href="/signup.html">Sign up first</a>
    <a id="adash" href="/index.html">Home</a>
        
       </form>
