--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
     <link rel="stylesheet" href="signup.css">
-    <!-- <script type="module"src='signup.js' defer></script> -->
+    <script type="module"src='signup.js' defer></script>
 </head>
 <body>
     <div class="form">
