--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/login.css">
     <script type="module"src='login.js' defer></script>
 </head>
 <body>
