--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Page</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
 
@@ -17,8 +17,8 @@
         <div id="close-navbar" class="fas fa-times"></div>
 
         <a  id="a1" href="#about1">about</a>
-        <a  id="a2" href="/signup.html">Signup</a>
-        <a  id="a3"  href="/login.html">Login</a>
+        <a  id="a2" href="./signup.html">Signup</a>
+        <a  id="a3"  href="./login.html">Login</a>
       
     </nav>
 
@@ -35,7 +35,7 @@
 </footer> 
 
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
     
 </body>
 </html>
