--- a/signup.html
+++ b/signup.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
-    <link rel="stylesheet" href="signup.css">
-    <script type="module"src='signup.js' defer></script>
+    <link rel="stylesheet" href="./signup.css">
+    <script type="module"src='./signup.js' defer></script>
 </head>
 <body>
     <div class="form">
@@ -21,8 +21,8 @@
             <input id="passwordsign"  type="password"placeholder="Password" style="height: 30px"> <br><br>
        
             <button id="btnsign" type="submit"><b>Sign Up</b></button> <br> <br>
-       <a href="/login.html">Login to an existing account</a>
-       <a href="/index.html">Home</a>
+       <a href="./login.html">Login to an existing account</a>
+       <a href="./index.html">Home</a>
            
           </form>
         </div>
