--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="login.css">
-    <script type="module"src='login.js' defer></script>
+    <link rel="stylesheet" href="./login.css">
+    <script type="module"src='./login.js' defer></script>
 </head>
 <body>
 
@@ -20,8 +20,8 @@
         <input id="passlog"  type="password"placeholder="Password" style="height: 30px"> <br><br>
    
         <button id="btnlogin" type="submit"><b>Log in</b></button> <br> <br>
-   <a id="asignup"   href="/signup.html">Sign up first</a>
-   <a id="adash" href="/index.html">Home</a>
+   <a id="asignup"   href="./signup.html">Sign up first</a>
+   <a id="adash" href="./index.html">Home</a>
        
       </form>
     </div>
